crates/tmark-writers/tests/snapshots/fixtures__inline-smallcaps@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>Small caps <span class="smallcaps">on the label</span class="smallcaps"> here.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
