crates/tmark-writers/tests/snapshots/fixtures__inline-smallcaps@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Small caps \textsc{on the label} here.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
