crates/tmark-writers/tests/snapshots/fixtures__inline-smallcaps@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Small caps #smallcaps[on the label] here.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
