crates/tmark-writers/tests/snapshots/fixtures__inline-smart-symbols-escaped@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Copyright (c) 2025, tea (tm), reg (r), c/o Ada: 1/2 a cup, +/- 3, 4 =/= 5.

Arrows a --> b, c <-- d, e <--> f; © then © is still a symbol, (c) is not.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
