crates/tmark-writers/tests/snapshots/fixtures__inline-smart-symbols@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Copyright © 2025, tea ™, reg ®, ℅ Ada: ½ a cup, \(\pm\) 3, 4 \(\neq\) 5, a \(\rightarrow\) b.

He said \enquote{straight quotes}, \tscodeinline{"not in code"}, and "not a quote".

---requires---
{
  "packages": [
    "csquotes",
    "fvextra",
    "tcolorbox"
  ],
  "fragments": [
    "ts-code"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
