crates/tmark-writers/tests/snapshots/fixtures__inline-smart-symbols@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Copyright © 2025, tea ™, reg ®, ℅ Ada: ½ a cup, ± 3, 4 ≠ 5, a → b.

He said "straight quotes", `"not in code"`, and "not a quote".

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
