crates/tmark-writers/tests/snapshots/fixtures__lead-run-in@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\tslead{Boot sequence.} The device powers the flash before the SoC.

---requires---
{
  "packages": [
    "epigraph",
    "graphicx",
    "marginnote",
    "multicol",
    "progressbar",
    "xcolor"
  ],
  "fragments": [
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
