crates/tmark-writers/tests/snapshots/fixtures__lead@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p><strong class="lead">Boot sequence.</strong> The device powers the flash before the SoC.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
